--- a/strock1.ipynb
+++ b/strock1.ipynb
@@ -224,7 +224,7 @@
    ],
    "source": [
     "# Load the dataset\n",
-    "data = pd.read_csv(r'E:\\3rd Year 1st semi\\Fdm\\FDM_Project\\Strock Prediction\\Dataset\\healthcare-dataset-stroke-data.csv')\n",
+    "data = pd.read_csv(r'Dataset\\healthcare-dataset-stroke-data.csv')\n",
     "\n",
     "print(\"No of columns in the data : \", len(data.columns))\n",
     "print(\"No of rows in the data : \", len(data))\n",
